Cherry-pick r254067. rdar://problem/58552878

REGRESSION(r247626): Introduced memory regression
    https://bugs.webkit.org/show_bug.cgi?id=205815

    Unreviewed rollout of https://trac.webkit.org/changeset/247626/webkit.

    * platform/graphics/cocoa/FontCacheCoreText.cpp:
    (WebCore::FontCache::prewarmGlobally):
    (WebCore::fontFamiliesForPrewarming): Deleted.

    Canonical link: https://commits.webkit.org/218942@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254067 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/218903.21@safari-609-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-609-branch@254585 268f45cc-cd09-0410-ab3c-d52691b4dbfc